force-app/main/default/objects/AssessmentSheetSection__c/AssessmentSheetSection__c.object-meta.xml
<CustomObject>
    <label>Assessment Sheet Section</label>
    <nameField>
        <displayFormat>SS_{YYYYMMDD}_{000}</displayFormat>
        <label>Assessment Sheet Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>