force-app/main/default/objects/AssessmentSheetSection__c/fields/AssessmentResultHeader__c.field-meta.xml
<CustomField>
    <fullName>AssessmentResultHeader__c</fullName>
    <label>Assessment Sheet Header</label>
    <referenceTo>AssessmentSheet__c</referenceTo>
    <relationshipLabel>Assessment Sheet Section</relationshipLabel>
    <relationshipName>Assessment_Sheet_Section</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>