force-app/main/default/objects/AssessmentSheetSection__c/fields/AssessmentTemplateGroup__c.field-meta.xml
<CustomField>
    <fullName>AssessmentTemplateGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment Template Group</label>
    <referenceTo>AssessmentTemplateSection__c</referenceTo>
    <relationshipLabel>Assessment Sheet Section</relationshipLabel>
    <relationshipName>Assessment_Sheet_Section</relationshipName>
    <type>Lookup</type>
</CustomField>