force-app/main/default/objects/AssessmentSheetSection__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <summarizedField>AssessmentSheetItem__c.Score__c</summarizedField>
    <summaryForeignKey>AssessmentSheetItem__c.AssessmentResultSection__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>