force-app/main/default/objects/AssessmentSheetSection__c/fields/SequenceOrder__c.field-meta.xml
<CustomField>
    <fullName>SequenceOrder__c</fullName>
    <label>Sequence Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>